improved scroll and tried to fix button hover anim error on mobile

--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
     --navbar-height: 10vh;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     margin: 0;
     font-family: 'Trebuchet MS', Helvetica, Arial, sans-serif;
